Remved udpate and delete endpoints, need more time to build properly
